<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.sclfitness.keeppace.RaceActivity">

    <Button
        android:id="@+id/button_race_5k"
        style="@style/RaceButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:onClick="onClickFive"
        android:text="@string/race_fiveK" />

    <Button
        android:id="@+id/button_race_10k"
        style="@style/RaceButton"
        android:layout_below="@+id/button_race_5k"
        android:layout_marginTop="50dp"
        android:onClick="onClickTen"
        android:text="@string/race_tenK" />

    <Button
        android:id="@+id/button_race_halfMarathon"
        style="@style/RaceButton"
        android:layout_below="@+id/button_race_10k"
        android:layout_marginTop="50dp"
        android:onClick="onClickHalfMarathon"
        android:text="@string/race_halfMarathon" />

    <Button
        android:id="@+id/button_race_fullMarathon"
        style="@style/RaceButton"
        android:layout_below="@+id/button_race_halfMarathon"
        android:layout_marginTop="50dp"
        android:onClick="onClickFullMarathon"
        android:text="@string/race_fullMarathon" />

</RelativeLayout>
